Fix spacing and wrong background image name

--- a/frontend/src/app/components/overview/overview-panel/overview-panel.less
+++ b/frontend/src/app/components/overview/overview-panel/overview-panel.less
@@ -45,7 +45,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        top: 460px;
+        top: 420px;
         margin-bottom: 60px;
         background-color: fade(@color6, 7%);
         justify-content: center;
